# opencv-rust

./: .gitignore  Cargo.toml  build.rs  gen_rust.py
examples/: video_capture.rs  video_facedetect.rs  video_features.rs  video_to_gray.rs
native/: mat.cpp
src/: lib.rs  mat.rs
