[package]
name = "opencv"
description = "Rust bindings for OpenCV"
documentation = "http://www.poumeyrol.fr/doc/opencv-rust/opencv/index.html"
repository = "https://github.com/kali/opencv-rust"
readme = "README.md"
keywords = [ "opencv", "vision" ]
license = "WTFPL"
version = "0.2.2"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
build = "build.rs"

[package.metadata]
opencv-src = "https://github.com/opencv/opencv/archive/2.4.13.1.zip"

[[bin]]
name = "capture"
path = "examples/video_capture.rs"

[[bin]]
name = "facedetect"
path = "examples/video_facedetect.rs"

[[bin]]
name = "features"
path = "examples/video_features.rs"

[[bin]]
name = "to_gray"
path = "examples/video_to_gray.rs"

[dependencies]
libc = "0.2"

[features]
build  = []

[build-dependencies]
pkg-config = "0.3.8"
gcc = "0.3.38"
glob = "0.2.11"
curl = "0.4.1"
cmake = "0.1.18"
toml = {version = "0.2.1", default-features = false}